src/objects/ADvendio__Ad_Type__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__Priority__c</fullName>
        <description>Choose the priority of transmission of this ad type to the ad server.</description>
        <inlineHelpText>Choose the priority of transmission of this ad type to the ad server.</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>Exclu without Capping</fullName>
                </value>
                <value>
                    <fullName>Exclu 2</fullName>
                </value>
                <value>
                    <fullName>Exclu 3</fullName>
                </value>
                <value>
                    <fullName>Exclu 4</fullName>
                </value>
                <value>
                    <fullName>High 1</fullName>
                </value>
                <value>
                    <fullName>High 2</fullName>
                </value>
                <value>
                    <fullName>High 3</fullName>
                </value>
                <value>
                    <fullName>High 4</fullName>
                </value>
                <value>
                    <fullName>Normal 1</fullName>
                </value>
                <value>
                    <fullName>Normal 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__ProductType__c</fullName>
        <description>Choose the product type to define how this ad type is to be transmitted to the ad server.</description>
        <inlineHelpText>Choose the product type to define how this ad type is to be transmitted to the ad server.</inlineHelpText>
        <label>ProductType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Interstitial</fullName>
                </value>
                <value>
                    <fullName>Text Link</fullName>
                </value>
                <value>
                    <fullName>Companion Streaming</fullName>
                </value>
                <value>
                    <fullName>Companion Interstitial</fullName>
                </value>
                <value>
                    <fullName>Streaming</fullName>
                </value>
                <value>
                    <fullName>Companion</fullName>
                </value>
                <value>
                    <fullName>Master</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__Product_search_Name__c</fullName>
        <description>Enter a description for this ad type as applied in the ad spec search.</description>
        <inlineHelpText>Enter a description for this ad type as applied in the ad spec search.</inlineHelpText>
        <label>Product search Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ReportSlotsClicks__c</fullName>
        <description>If set, only clicks from selected slot sizes are counted for delivery data.</description>
        <inlineHelpText>If set, only clicks from selected slot sizes are counted for delivery data.</inlineHelpText>
        <label>Report Slots (Clicks)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>100x300</fullName>
                </value>
                <value>
                    <fullName>10x1</fullName>
                </value>
                <value>
                    <fullName>120x240</fullName>
                </value>
                <value>
                    <fullName>120x60</fullName>
                </value>
                <value>
                    <fullName>120x600</fullName>
                </value>
                <value>
                    <fullName>120x90</fullName>
                </value>
                <value>
                    <fullName>125x125</fullName>
                </value>
                <value>
                    <fullName>160x50</fullName>
                </value>
                <value>
                    <fullName>160x600</fullName>
                </value>
                <value>
                    <fullName>180x150</fullName>
                </value>
                <value>
                    <fullName>1x1</fullName>
                </value>
                <value>
                    <fullName>1x5</fullName>
                </value>
                <value>
                    <fullName>240x400</fullName>
                </value>
                <value>
                    <fullName>250x250</fullName>
                </value>
                <value>
                    <fullName>2x2</fullName>
                </value>
                <value>
                    <fullName>2x5</fullName>
                </value>
                <value>
                    <fullName>300x250</fullName>
                </value>
                <value>
                    <fullName>300x600</fullName>
                </value>
                <value>
                    <fullName>336x280</fullName>
                </value>
                <value>
                    <fullName>420x240</fullName>
                </value>
                <value>
                    <fullName>468x60</fullName>
                </value>
                <value>
                    <fullName>480x361</fullName>
                </value>
                <value>
                    <fullName>710x1</fullName>
                </value>
                <value>
                    <fullName>728x90</fullName>
                </value>
                <value>
                    <fullName>80x15</fullName>
                </value>
                <value>
                    <fullName>88x31</fullName>
                </value>
                <value>
                    <fullName>91x91</fullName>
                </value>
                <value>
                    <fullName>92x92</fullName>
                </value>
                <value>
                    <fullName>93x93</fullName>
                </value>
                <value>
                    <fullName>94x94</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__ReportSlotsViewedAI__c</fullName>
        <description>Slots to use for delivery reports. If defined, only deliveries on given slots will be counted and used for Invoicing.</description>
        <inlineHelpText>Slots to use for delivery reports. If defined, only deliveries on given slots will be counted and used for Invoicing.</inlineHelpText>
        <label>Report Slots (Viewed AI)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1x1</fullName>
                </value>
                <value>
                    <fullName>80x15</fullName>
                </value>
                <value>
                    <fullName>88x31</fullName>
                </value>
                <value>
                    <fullName>100x300</fullName>
                </value>
                <value>
                    <fullName>120x60</fullName>
                </value>
                <value>
                    <fullName>120x90</fullName>
                </value>
                <value>
                    <fullName>120x240</fullName>
                </value>
                <value>
                    <fullName>120x600</fullName>
                </value>
                <value>
                    <fullName>125x125</fullName>
                </value>
                <value>
                    <fullName>160x600</fullName>
                </value>
                <value>
                    <fullName>180x150</fullName>
                </value>
                <value>
                    <fullName>234x60</fullName>
                </value>
                <value>
                    <fullName>240x400</fullName>
                </value>
                <value>
                    <fullName>250x250</fullName>
                </value>
                <value>
                    <fullName>300x250</fullName>
                </value>
                <value>
                    <fullName>300x600</fullName>
                </value>
                <value>
                    <fullName>336x280</fullName>
                </value>
                <value>
                    <fullName>468x60</fullName>
                </value>
                <value>
                    <fullName>728x90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__ReportSlots__c</fullName>
        <description>Slots to use for delivery reports. If defined, only deliveries on given slots will be counted.</description>
        <inlineHelpText>Nur die im Report Slot gepflegten Slots werden bei der Betrachtung AIs/Clicks zur Abrechnung herangezogen. 

Wenn nicht gepflegt ist in diesem Feld, dann werden alle Slots welche bei Master/Comp./Forecast hinterlegt sind, genutzt!</inlineHelpText>
        <label>Report Slots (AI)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1024x768</fullName>
                </value>
                <value>
                    <fullName>10x1</fullName>
                </value>
                <value>
                    <fullName>15x1</fullName>
                </value>
                <value>
                    <fullName>160x50</fullName>
                </value>
                <value>
                    <fullName>160x600</fullName>
                </value>
                <value>
                    <fullName>1x1</fullName>
                </value>
                <value>
                    <fullName>1x5</fullName>
                </value>
                <value>
                    <fullName>206x60</fullName>
                </value>
                <value>
                    <fullName>20x1</fullName>
                </value>
                <value>
                    <fullName>25x1</fullName>
                </value>
                <value>
                    <fullName>2x2</fullName>
                </value>
                <value>
                    <fullName>2x5</fullName>
                </value>
                <value>
                    <fullName>300x250</fullName>
                </value>
                <value>
                    <fullName>300x260</fullName>
                </value>
                <value>
                    <fullName>300x60</fullName>
                </value>
                <value>
                    <fullName>30x1</fullName>
                </value>
                <value>
                    <fullName>320x150</fullName>
                </value>
                <value>
                    <fullName>320x480</fullName>
                </value>
                <value>
                    <fullName>320x50</fullName>
                </value>
                <value>
                    <fullName>320x51</fullName>
                </value>
                <value>
                    <fullName>320x60</fullName>
                </value>
                <value>
                    <fullName>40x1</fullName>
                </value>
                <value>
                    <fullName>420x240</fullName>
                </value>
                <value>
                    <fullName>468x60</fullName>
                </value>
                <value>
                    <fullName>480x320</fullName>
                </value>
                <value>
                    <fullName>480x360</fullName>
                </value>
                <value>
                    <fullName>480x361</fullName>
                </value>
                <value>
                    <fullName>480x70</fullName>
                </value>
                <value>
                    <fullName>50x1</fullName>
                </value>
                <value>
                    <fullName>60x1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__RoadblockingType__c</fullName>
        <description>he strategy for serving roadblocked creatives, i.e. instances where multiple creatives must be served together on a single web page. This attribute is optional and defaults to &apos;One or more&apos;</description>
        <inlineHelpText>The strategy for serving roadblocked creatives, i.e. instances where multiple creatives must be served together on a single web page. This attribute is optional and defaults to &apos;One or more&apos;</inlineHelpText>
        <label>Roadblocking Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Only one</fullName>
                </value>
                <value>
                    <fullName>One or more</fullName>
                </value>
                <value>
                    <fullName>As many as possible</fullName>
                </value>
                <value>
                    <fullName>All roadblock</fullName>
                </value>
                <value>
                    <fullName>Creative set</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__SecondaryGoalType__c</fullName>
        <description>The type of the secondary goal for a campaign item. It defines the period over which the goal for a campaign item should be reached. Currently it will be considered only if the billing category of campaign item is vCPM while submitting to DFP.</description>
        <inlineHelpText>The type of the secondary goal for a campaign item. It defines the period over which the goal for a campaign item should be reached. Currently it will be considered only if the billing category of campaign item is vCPM while submitting to DFP.</inlineHelpText>
        <label>Secondary Goal Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ADvendio__Adtype__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lifetime</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__SetBleed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Please check if this AdType uses bleeding. (This information can be transferred to your flat planning tool.)</description>
        <inlineHelpText>Please check if this AdType uses bleeding. (This information can be transferred to your flat planning tool.)</inlineHelpText>
        <label>Set Bleed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__TileCategory__c</fullName>
        <description>Enter the tile category for this ad type.</description>
        <inlineHelpText>Enter the tile category for this ad type.</inlineHelpText>
        <label>TileCategory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <description>Enter a UniqueKey (recommended: syntax) for this ad type.</description>
        <externalId>true</externalId>
        <inlineHelpText>Enter a UniqueKey (recommended: syntax) for this ad type.</inlineHelpText>
        <label>UniqueKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ADvendio__VideoPosition__c</fullName>
        <description>Represents a targetable position within a video. A video ad can be targeted to a position (pre-roll, all mid-rolls, or post-roll), or to a specific mid-roll index.</description>
        <inlineHelpText>Represents a targetable position within a video. A video ad can be targeted to a position (pre-roll, all mid-rolls, or post-roll), or to a specific mid-roll index.</inlineHelpText>
        <label>Video Position</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ADvendio__EnvironmentType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>PreRoll</fullName>
                </value>
                <value>
                    <fullName>MidRoll</fullName>
                </value>
                <value>
                    <fullName>PostRoll</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mig_Fuer_Backfill__c</fullName>
        <formula>IF(OR(OR(OR(CONTAINS(ADvendio__Product_search_Name__c, &apos;Fullbanner&apos;) ,CONTAINS(ADvendio__Product_search_Name__c, &apos;Superbanner&apos;)),CONTAINS(ADvendio__Product_search_Name__c, &apos;Skyscraper&apos;)),CONTAINS(ADvendio__Product_search_Name__c, &apos;Medium Rectangle&apos;))   ,    true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mig_Fuer_Backfill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mig_Info__c</fullName>
        <description>INSERT: von ProDia importiert
UPDATE: von ProDia Änderungen übernommen
DELETE: nicht in ProDia vorhanden, kann evtl. gelöscht werden
NOT_CHANGED: in ProDia und SF identisch, kein Update</description>
        <inlineHelpText>INSERT: von ProDia importiert
UPDATE: von ProDia Änderungen übernommen
DELETE: nicht in ProDia vorhanden, kann evtl. gelöscht werden
NOT_CHANGED: in ProDia und SF identisch, kein Update</inlineHelpText>
        <label>Migration_Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mig_IsPostroll__c</fullName>
        <formula>CONTAINS(&apos;,62,5245,5434,5435,&apos;, &apos;,&apos;&amp;  Mig_ProdiaKey__c &amp; &apos;,&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mig_IsPostroll</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mig_IsSponsoring__c</fullName>
        <formula>CONTAINS(&apos;,5063,5438,5439,5440,5441,5442,5443,&apos;, &apos;,&apos;&amp;  Mig_ProdiaKey__c &amp; &apos;,&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mig_IsSponsoring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mig_Kommentar__c</fullName>
        <label>Mig_Kommentar</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mig_MasterNeuWBs__c</fullName>
        <label>Mig_MasterNeuWBs</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mig_MergeStatus__c</fullName>
        <formula>IF( Mig_MergedInto__c = null,
IF(  CONTAINS(Mig_ProdiaKey__c, &quot;|&quot;) , &quot;Vater&quot;, &quot;-&quot;), &quot;Kind&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mig_MergeStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mig_MergedIntoKeyName__c</fullName>
        <formula>Mig_MergedInto__r.Mig_ProdiaKey__c + &apos; - &apos; + Mig_MergedInto__r.ADvendio__Product_search_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mig_MergedIntoKeyName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mig_MergedInto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mig_MergedInto</label>
        <referenceTo>ADvendio__Ad_Type__c</referenceTo>
        <relationshipLabel>Zusammengeführte Werbeformen</relationshipLabel>
        <relationshipName>ZusammengefuehrteWerbeformen</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mig_Paket_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mig_Paket_Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mig_ProdiaKey__c</fullName>
        <description>Eindeutiger Schlüssel aus ProDia, der für Abgleich bei Migrataion benötigt wird</description>
        <inlineHelpText>Eindeutiger Schlüssel aus ProDia, der für Abgleich bei Migrataion benötigt wird</inlineHelpText>
        <label>Mig_ProdiaKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mig_VAbfrage__c</fullName>
        <formula>OR(OR(OR(OR(OR(OR(OR(OR(OR(OR(OR(OR(OR(OR(OR(OR(OR(OR(OR(OR(OR(OR(
CONTAINS( Mig_ProdiaKey__c , &apos;5091&apos;) ,
CONTAINS( Mig_ProdiaKey__c , &apos;5092&apos;)),
CONTAINS( Mig_ProdiaKey__c , &apos;5169&apos;)),
CONTAINS( Mig_ProdiaKey__c , &apos;5176&apos;)),
CONTAINS( Mig_ProdiaKey__c , &apos;5184&apos;)),
CONTAINS( Mig_ProdiaKey__c , &apos;5185&apos;)),
CONTAINS( Mig_ProdiaKey__c , &apos;5212&apos;)),
CONTAINS( Mig_ProdiaKey__c , &apos;5222&apos;)),
CONTAINS( Mig_ProdiaKey__c , &apos;5223&apos;)),
CONTAINS( Mig_ProdiaKey__c , &apos;5224&apos;)),
CONTAINS( Mig_ProdiaKey__c , &apos;5225&apos;)),
CONTAINS( Mig_ProdiaKey__c , &apos;5228&apos;)),
CONTAINS( Mig_ProdiaKey__c , &apos;5233&apos;)),
CONTAINS( Mig_ProdiaKey__c , &apos;5234&apos;)),
CONTAINS( Mig_ProdiaKey__c , &apos;5244&apos;)),
CONTAINS( Mig_ProdiaKey__c , &apos;5264&apos;)),
CONTAINS( Mig_ProdiaKey__c , &apos;5265&apos;)),
CONTAINS( Mig_ProdiaKey__c , &apos;5267&apos;)),
CONTAINS( Mig_ProdiaKey__c , &apos;5269&apos;)),
CONTAINS( Mig_ProdiaKey__c , &apos;5291&apos;)),
CONTAINS( Mig_ProdiaKey__c , &apos;5293&apos;)),
CONTAINS( Mig_ProdiaKey__c , &apos;5299&apos;)),
CONTAINS( Mig_ProdiaKey__c , &apos;5334&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mig_VAbfrage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mig_Zusammenfuehrungs_Kategorie__c</fullName>
        <formula>IF(CONTAINS(ADvendio__Product_search_Name__c, &apos;Mixed&apos;)   ,   &apos;1-Mixed&apos;,
IF(CONTAINS(ADvendio__Product_search_Name__c, &apos;Rotation&apos;)   ,&apos;2-Rotation&apos;,
IF(CONTAINS(ADvendio__Product_search_Name__c, &apos;Aufschlag&apos;)  ,&apos;3-Aufschlag&apos;,
IF(OR(CONTAINS(ADvendio__Product_search_Name__c, &apos;not to use&apos;), CONTAINS(ADvendio__Product_search_Name__c, &apos;naktiv&apos;))   ,  &apos;4-Inaktiv in Search-Name&apos;,
IF(CONTAINS(ADvendio__Product_search_Name__c, &apos;Umfeld&apos;)   ,  &apos;7-Umfeld&apos;,
IF(CONTAINS(ADvendio__Product_search_Name__c, &apos;(WB)&apos;)   ,    &apos;8-(WB) in Search-Name&apos;,
IF(SomDig_WbFaehig__c   ,                                    &apos;5-Weightbased im Feld&apos;,
&apos;&apos;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mig_Kategorie</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SomDig_AdSlotGruppierung__c</fullName>
        <label>AdSlot Gruppierung</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>Sponsoring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomDig_BeschreibungBesonderheiten__c</fullName>
        <label>Beschreibung/Besonderheiten</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SomDig_CreativeMapping__c</fullName>
        <label>Creative Mapping</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Audio-roll (8x8)</fullName>
                </value>
                <value>
                    <fullName>Break Ad (60x1)</fullName>
                </value>
                <value>
                    <fullName>Mid-roll (20x1)</fullName>
                </value>
                <value>
                    <fullName>Other (Rest)</fullName>
                </value>
                <value>
                    <fullName>Overlay (30x1)</fullName>
                </value>
                <value>
                    <fullName>Postroll (40x1)</fullName>
                </value>
                <value>
                    <fullName>Pre-roll (10x1)</fullName>
                </value>
                <value>
                    <fullName>Pre-split (15x1)</fullName>
                </value>
                <value>
                    <fullName>Sponsoring (50x1, 25x1)</fullName>
                </value>
                <value>
                    <fullName>SwitchIn (420x240)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomDig_DwhReportSlots__c</fullName>
        <description>Hilfsfeld für DWH Export, ergänzt &quot;v&quot;</description>
        <formula>IF (ISBLANK(SomDig_ReportSlots__c),
  &apos;&apos;,
  IF ( TEXT(ADvendio__EnvironmentType__c) =&apos;Video Player&apos;,
    SUBSTITUTE(SomDig_ReportSlots__c, &apos;;&apos;, &apos;v;&apos;) + &apos;v&apos;,
    SomDig_ReportSlots__c
  )
)</formula>
        <inlineHelpText>Hilfsfeld für DWH Export, ergänzt &quot;v&quot;</inlineHelpText>
        <label>Report Slots AI (DWH)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_FcAnzahlPeriode__c</fullName>
        <description>Anzahl der Perioden, für welche die angegebene FC-Menge gilt (drei Tage oder 4 Wochen etc). Wird automatisch an alle entsprechenden Werbemittel weitervererbt</description>
        <inlineHelpText>Anzahl der Perioden, für welche die angegebene FC-Menge gilt (drei Tage oder 4 Wochen etc). Wird automatisch an alle entsprechenden Werbemittel weitervererbt</inlineHelpText>
        <label>FC Anzahl Periode</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomDig_FcMenge__c</fullName>
        <description>Anzahl der Einblendungen im ausgewählten Zeitraum. Wird ans Werbemittel fix hinterlegt/weitervererbt</description>
        <inlineHelpText>Anzahl der Einblendungen im ausgewählten Zeitraum. Wird ans Werbemittel fix hinterlegt/weitervererbt</inlineHelpText>
        <label>FC Menge</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomDig_FcPeriode__c</fullName>
        <description>Auswahl der entsprechenden Perioden/Zeiteinheit, für welche die angegebene FC-Menge und Anzahl Periode gilt. Wird automatisch an alle entsprechenden Werbemittel weitervererbt</description>
        <inlineHelpText>Auswahl der entsprechenden Perioden/Zeiteinheit, für welche die angegebene FC-Menge und Anzahl Periode gilt. Wird automatisch an alle entsprechenden Werbemittel weitervererbt</inlineHelpText>
        <label>FC Periode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Minute</fullName>
                </value>
                <value>
                    <fullName>Session</fullName>
                </value>
                <value>
                    <fullName>Stunde</fullName>
                </value>
                <value>
                    <fullName>Tag</fullName>
                </value>
                <value>
                    <fullName>Woche</fullName>
                </value>
                <value>
                    <fullName>Monat</fullName>
                </value>
                <value>
                    <fullName>Jahr</fullName>
                </value>
                <value>
                    <fullName>Kampagne</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomDig_InhouseProduktion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Kennzeichen für interne Produktion</description>
        <inlineHelpText>Bitte kennzeichnen wenn interne Produktion erforderlich!</inlineHelpText>
        <label>Inhouse Produktion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_MediagattungsDifferenzierung__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Gruppierung der einzelenen Werbeformen nach ihrer Art</description>
        <inlineHelpText>Gruppierung der einzelenen Werbeformen nach ihrer Art</inlineHelpText>
        <label>Mediagattungs-Differenzierung</label>
        <referenceTo>SomDig_MediagattungsDifferenzierung__c</referenceTo>
        <relationshipLabel>Werbeformen</relationshipLabel>
        <relationshipName>Werbeformen</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_ReportSlots__c</fullName>
        <description>internes Hilfsfeld, zur besseren Weiterverarbeitung des MultiPicklist-Feldes</description>
        <inlineHelpText>internes Hilfsfeld, zur besseren Weiterverarbeitung des MultiPicklist-Feldes</inlineHelpText>
        <label>Report Slots AI(Text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Vorlaufzeit__c</fullName>
        <description>beschreibt die Zeit benötigt für die Produktion oder Vorbereitung</description>
        <inlineHelpText>Vorlaufzeit in Tagen, beschreibt die Zeit benötigt für die Produktion oder Vorbereitung</inlineHelpText>
        <label>Vorlaufzeit</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomDig_WbFaehig__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WB fähig</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_Werbeformgruppe__c</fullName>
        <description>Unterscheidung in Standard und Sonderwerbeformen.
Wichtig unter anderem für die Inventarklassifizierung</description>
        <inlineHelpText>Unterscheidung in Standard und Sonderwerbeformen.
Wichtig unter anderem für die Inventarklassifizierung</inlineHelpText>
        <label>Werbeformgruppe</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Sonderwerbeform</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Ad Type</label>
    <listViews>
        <fullName>DFP</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__RoadblockingType__c</columns>
        <columns>ADvendio__AdServer_Login__c</columns>
        <columns>SomDig_MediagattungsDifferenzierung__c</columns>
        <columns>ADvendio__Master__c</columns>
        <columns>ADvendio__CompanionSize__c</columns>
        <columns>ADvendio__Blocker_Slot__c</columns>
        <columns>ADvendio__ForecastSlots__c</columns>
        <columns>ADvendio__ReportSlots__c</columns>
        <columns>ADvendio__Keyvalue_Keyword__c</columns>
        <columns>ADvendio__TileCategory__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ADvendio__Ad_Type__c.ADvendio__DFP</value>
        </filters>
        <label>DFP</label>
        <language>de</language>
    </listViews>
</CustomObject>